--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 ---
 layout: body.njk
-title: E-day výstava plastikových modelů
+title: E-day kontaktní údaje
 ---
       
                 <div class="zahlavi-kontakt">
