--- a/kudynaeday.html
+++ b/kudynaeday.html
@@ -1,6 +1,6 @@
 ---
 layout: body.njk
-title: E-day výstava plastikových modelů
+title: Kudy na E-day
 ---
         <div class="mapa">
             <div class="text-maps">
