--- a/program.html
+++ b/program.html
@@ -1,6 +1,6 @@
 ---
 layout: body.njk
-title: E-day výstava plastikových modelů
+title: Program výstavy E-day
 ---
 
         <div class="zahlavi">
@@ -9,7 +9,6 @@ title: E-day výstava plastikových modelů
 
         <div class="program-page">
             <div class="content">        
-                <p>
                     <h2>Program 30. 9. 2022</h2>
 
                     <ul>
@@ -20,11 +19,11 @@ title: E-day výstava plastikových modelů
 
                     </ul>
 
-                </p>
             </div>
-        </div>
+        </div>    
 
-                  <div class="content">        
+                <div class="content-box">
+                    <div class="content">        
                         <h2>Sobota 1.10.2022</h2>
 
                         <ul>
@@ -44,3 +43,5 @@ title: E-day výstava plastikových modelů
                         </ul>
 
                     </div>
+                </div>
+            
