--- a/aktuality.html
+++ b/aktuality.html
@@ -2,9 +2,8 @@
 layout: body.njk
 title: Aktuality - E-day
 ---
-    <main>
-
-        <div class="zahlavi-aktuality">
+<section>
+    <div class="zahlavi-aktuality">
             <h1 class="aktuality">Aktuality</h1>
         </div>
 
@@ -12,6 +11,7 @@ title: Aktuality - E-day
             <div class="content">        
                     <h2>Obsah se připravuje</h2>
             </div>
-        </div>
+    </div>
+
+</section>
         
-    </main>
