--- a/galerie.html
+++ b/galerie.html
@@ -4,7 +4,7 @@ title: Galerie E-day 2022
 ---
         <!-- Menu, header -->
 
-    <main>
+<section>
         <div>
             <div class="zahlavi-galerie">
                 <h1 class="aktuality"> E-day 2022 Milovice </h1>
@@ -70,6 +70,6 @@ title: Galerie E-day 2022
                 </div>
             </div>
         </div>
-    </main>
+</section>
 
     <!-- Footer -->
