--- a/kontakt.html
+++ b/kontakt.html
@@ -2,10 +2,10 @@
 layout: body.njk
 title: E-day kontaktní údaje
 ---
-      
-                <div class="zahlavi-kontakt">
-                    <h1 class="aktuality"> Kontakt </h1>
-                </div>
+    <sction>    
+        <div class="zahlavi-kontakt">
+            <h1 class="aktuality"> Kontakt </h1>
+        </div>
 
 
         <div class="content-contact">
@@ -56,3 +56,4 @@ title: E-day kontaktní údaje
                     </p>
             </div>
         </div>
+    </sction>  
