--- a/program.html
+++ b/program.html
@@ -2,7 +2,7 @@
 layout: body.njk
 title: Program výstavy E-day
 ---
-
+    <section>
         <div class="zahlavi">
             <h1 class="program">Program</h1>
         </div>
@@ -22,26 +22,26 @@ title: Program výstavy E-day
             </div>
         </div>    
 
-                <div class="content-box">
-                    <div class="content">        
-                        <h2>Sobota 1.10.2022</h2>
+        <div class="content-box">
+            <div class="content">        
+                <h2>Sobota 1.10.2022</h2>
 
-                        <ul>
-                            <strong> Program pro veřejnost: </strong><br>
-                            <li>9:00 zahájení výstavy</li>
-                            <li>9:30 Novinky Eduard v roce 2023</li>
-                            <li>10:30 Průlet sportovních letounů Z-326/C-305 a Z-526</li>
-                            <li>11:00 Křest knihy V OBLACÍCH leteckého malíře Jaroslava Velce a jeho spoluautorů, moderátorem křtu bude spisovatel Ondřej Neff</li>
-                            <li>12:30 Kotel Eduard (Vladimír Šulc)</li>
-                            <li>14:00 Kotel Special Hobby (Alfred Riedel)</li>
-                            <li>15:30 Vyhlášení výsledků soutěže Czech Model Masters</li>
-                            <li>Během celého dne budou probíhat modelářské workshopy</li>
-                            <li>17:00 Konec akce</li>
-                            <li>Změna programu vyhrazena</li>
-                            <li>Přejímka modelů soutěžících a vystavujících modelářů: 8:00 – 10:00</li>
+                <ul>
+                    <strong> Program pro veřejnost: </strong><br>
+                    <li>9:00 zahájení výstavy</li>
+                    <li>9:30 Novinky Eduard v roce 2023</li>
+                    <li>10:30 Průlet sportovních letounů Z-326/C-305 a Z-526</li>
+                    <li>11:00 Křest knihy V OBLACÍCH leteckého malíře Jaroslava Velce a jeho spoluautorů, moderátorem křtu bude spisovatel Ondřej Neff</li>
+                    <li>12:30 Kotel Eduard (Vladimír Šulc)</li>
+                    <li>14:00 Kotel Special Hobby (Alfred Riedel)</li>
+                    <li>15:30 Vyhlášení výsledků soutěže Czech Model Masters</li>
+                    <li>Během celého dne budou probíhat modelářské workshopy</li>
+                    <li>17:00 Konec akce</li>
+                    <li>Změna programu vyhrazena</li>
+                    <li>Přejímka modelů soutěžících a vystavujících modelářů: 8:00 – 10:00</li>
 
-                        </ul>
+                </ul>
 
-                    </div>
-                </div>
-            
+            </div>
+        </div>
+    </section>              
