--- a/kontakt.html
+++ b/kontakt.html
@@ -2,7 +2,7 @@
 layout: body.njk
 title: E-day kontaktní údaje
 ---
-    <sction>    
+    <section>    
         <div class="zahlavi-kontakt">
             <h1 class="aktuality"> Kontakt </h1>
         </div>
@@ -56,4 +56,4 @@ title: E-day kontaktní údaje
                     </p>
             </div>
         </div>
-    </sction>  
+    </section>  
